Fix dynamic spacing
This commit fixes the dynamic spacings and adds them throughout the preject to elements that needs to be responsive across screen changes.

--- a/src/app.scss
+++ b/src/app.scss
@@ -71,29 +71,20 @@
 	--zindex-nav: 1000;
 	--zindex-contacts: 2000;
 
+	--min-width: 375px;
 	--max-width: 1800px;
 	--contacts-width: 320px;
 	--card-max-width: 950px;
 	--header-max-width: 900px;
 
-	// TODO: Make spacing responsive
-	--spacing-xxs: calc(7px);
-	--spacing-xs: calc(14px);
-	--spacing-s: calc(21px);
-	--spacing-m: calc(24px);
-	--spacing-l: calc(42px);
-	--spacing-xl: calc(64px);
-	--spacing-xxl: calc(130px);
-	/* --min-screen-width: 375px;
-	--max-screen-width: 1600px;
-	--screen-size-rateo: calc((100vw - var(--min-screen-width)) / (var(--max-screen-width) - var(--min-screen-width)));
-	--spacing-xxs: calc(7px + (7px * var(--screen-size-rateo)));
-	--spacing-xs: calc(14px + (14px * var(--screen-size-rateo)));
-	--spacing-s: calc(21px + (21px * var(--screen-size-rateo)));
-	--spacing-m: calc(24px + (24px * var(--screen-size-rateo)));
-	--spacing-l: calc(42px + (42px * var(--screen-size-rateo)));
-	--spacing-xl: calc(64px + (64px * var(--screen-size-rateo)));
-	--spacing-xxl: calc(130px + (130px * var(--screen-size-rateo))); */
+	// Spacing
+	--spacing-xxs: calc(6px + (6 * (100vw - 375px) / (1800 - 375)));
+	--spacing-xs: calc(12px + (12 * (100vw - 375px) / (1800 - 375)));
+	--spacing-s: calc(16px + (16 * (100vw - 375px) / (1800 - 375)));
+	--spacing-m: calc(24px + (24 * (100vw - 375px) / (1800 - 375)));
+	--spacing-l: calc(32px + (32 * (100vw - 375px) / (1800 - 375)));
+	--spacing-xl: calc(64px + (64 * (100vw - 375px) / (1800 - 375)));
+	--spacing-xxl: calc(80px + (80 * (100vw - 375px) / (1800 - 375)));
 }
 
 body,
